--- a/ch1/hint/templates/hint/hint_code.html
+++ b/ch1/hint/templates/hint/hint_code.html
@@ -28,8 +28,19 @@
     </div>
     <span>{{ escape_room }}</span>
     <h2 class="mb-4">{{ theme }}</h2>
+    <div class="row mb-4">
+        <div class="col-2"></div>
+        <div class="col-8">
+            <form action="" method="post" name="hintCode" onsubmit="return check();">
+                {% csrf_token %}
+                <input class="form-control" style="background-color:black;color:white;border-color:white" name="p" value="{{ p }}" type="search" placeholder="힌트 코드 입력">
+            </form>
+            <h5 id="notCode" class="text-center mt-2" style="display:none;">다시 입력해주세요.</h5>
+        </div>
+        <div class="col-2"></div>
+    </div>
     <img src="{% static 'qr.png' %}">
-    <div class="row mt-3">
+    <div class="row mt-1">
         <div class="col-2"></div>
         <div class="col-8">
             <form action="" method="get" class="mb-3">
@@ -38,11 +49,6 @@
                 <input style="color:black;display:none;" id="input" name="q" value="{{ q }}" type="text">
                 <button id="hint_btn" type="submit" style="display:none;"></button>
             </form>
-            <form action="" method="post" name="hintCode" onsubmit="return check();">
-                {% csrf_token %}
-                <input class="form-control" style="background-color:black;color:white;border-color:white" name="p" value="{{ p }}" type="search" placeholder="힌트 코드 입력">
-            </form>
-            <h5 id="notCode" class="text-center mt-2" style="display:none;">힌트코드가 맞지 않습니다.<br>다시 입력해주세요.</h5>
             <h3 class="mt-3 mb-2">HINT COUNT</h3>
             <h4 class="m-0">{{ count }} / {{ hintCount }}</h4>
         </div>
