--- a/ch1/hint/templates/hint/hint_code.html
+++ b/ch1/hint/templates/hint/hint_code.html
@@ -256,6 +256,46 @@
         hintCode.p.value = "30";
         return true;
       }
+      else if(hintCode.p.value == "BC77") {
+        hintCode.p.value = "31";
+        return true;
+      }
+      else if(hintCode.p.value == "CD44") {
+        hintCode.p.value = "32";
+        return true;
+      }
+      else if(hintCode.p.value == "DC55") {
+        hintCode.p.value = "33";
+        return true;
+      }
+      else if(hintCode.p.value == "DD90") {
+        hintCode.p.value = "34";
+        return true;
+      }
+      else if(hintCode.p.value == "BC53") {
+        hintCode.p.value = "35";
+        return true;
+      }
+      else if(hintCode.p.value == "CD93") {
+        hintCode.p.value = "36";
+        return true;
+      }
+      else if(hintCode.p.value == "CB21") {
+        hintCode.p.value = "37";
+        return true;
+      }
+      else if(hintCode.p.value == "DC22") {
+        hintCode.p.value = "38";
+        return true;
+      }
+      else if(hintCode.p.value == "CC11") {
+        hintCode.p.value = "39";
+        return true;
+      }
+      else if(hintCode.p.value == "DD65") {
+        hintCode.p.value = "40";
+        return true;
+      }
       else {
         document.getElementById('notCode').setAttribute('style', '')
         return false;
