--- a/ch1/hint/templates/hint/create_hintQR_code.html
+++ b/ch1/hint/templates/hint/create_hintQR_code.html
@@ -151,14 +151,14 @@
                     <button class="p-0" id="blobButton11" style="background-color:black;color:white;border-color:black"><h4 class="mb-0">HINT11</h4></button>
                     <div id="hint11s" style="background-color:black; border-radius:8px" class="pt-2">
                         <div style="border:5px solid white;height:138px;width:138px;margin:auto;border-radius:6px" id="hint11"></div>
-                        <b><h6 class="py-2" style="color:white">DD88</h6></b>
+                        <b><h6 class="py-2" style="color:white">DC54</h6></b>
                     </div>
                 </div>
                 <div class="col-3 px-2">
                     <button class="p-0" id="blobButton12" style="background-color:black;color:white;border-color:black"><h4 class="mb-0">HINT12</h4></button>
                     <div id="hint12s" style="background-color:black; border-radius:8px" class="pt-2">
                         <div style="border:5px solid white;height:138px;width:138px;margin:auto;border-radius:6px" id="hint12"></div>
-                        <b><h6 class="py-2" style="color:white">CA29</h6></b>
+                        <b><h6 class="py-2" style="color:white">DD88</h6></b>
                     </div>
                 </div>
             </div>
