--- a/ch1/hint/templates/hint/theme_list.html
+++ b/ch1/hint/templates/hint/theme_list.html
@@ -16,7 +16,7 @@
         <div class="row">
             {% for i in themes %}
             <div class="col-6 mt-5">
-                <h4 class="my-5"><a style="color:black; text-decoration:none;color:white;" href="{% url 'hint:admin_confirm' user_id i.name %}">{{ i.name }}</a></h4>
+                <h4 class="my-5"><a style="color:black; text-decoration:none;color:white;" href="{% url 'hint:enter_key' user_id i.name %}">{{ i.name }}</a></h4>
             </div>
             {% endfor %}
         </div>
