--- a/ch1/hint/templates/hint/theme_edit.html
+++ b/ch1/hint/templates/hint/theme_edit.html
@@ -42,10 +42,30 @@
             <div class="col-10">
                 <div class="row">
                     <div class="col-2 py-1 text-center">
-                        <h4 class="mt-0 mb-2">테마명 :</h4>
+                        <h4 class="mt-0 mb-2">테마명:</h4>
                     </div>
                     <div class="col-3 p-0">
                         {{ form.name }}
+                    </div>
+                    <div class="col-1"></div>
+                    <div class="col-2 py-1 text-center">
+                    </div>
+                    <div class="col-3 p-0">
+                    </div>
+                    <div class="col-1"></div>
+                </div>
+            </div>
+            <div class="col-1"></div>
+        </div>
+        <div class="row my-2">
+            <div class="col-1"></div>
+            <div class="col-10">
+                <div class="row">
+                    <div class="col-2 py-1 text-center">
+                        <h4 class="mt-0 mb-2">Enter Key:</h4>
+                    </div>
+                    <div class="col-3 p-0">
+                        {{ form.enterKey }}
                     </div>
                     <div class="col-1"></div>
                     <div class="col-2 py-1 text-center">
