--- a/ch1/hint/templates/hint/enterKey.html
+++ b/ch1/hint/templates/hint/enterKey.html
@@ -10,7 +10,7 @@
 <div class="container mt-5">
     <div style="height:20px"></div>
     <div class="text-center mt-5">
-        <span style="color:white">{{ escape_room }}</span>
+        <span style="color:white">{{ theme }}</span>
         <h1 style="color:white">Enter Key</h1>
         <div class="m-5">
             <div style="height:120px"></div>
@@ -19,8 +19,8 @@
                 <input style="outline:0;color:white;border-color: black;width:100%;background-color:black;box-shadow: 0 2px 0 0 white;" name="q" value="{{ q }}" id="pw" type="password" placeholder="Enter Key를 입력해주세요">
                 <button type="submit" class="form-control mt-4" style="background-color:black;border-color: white;color:white">ENTER</button>
             </form>
-            <button type="button" onclick="back();" class="form-control mt-2" style="background-color:black;border-color: white;color:white">Enter Key 분실시 돌아가기</button>
-            <h3 class="mt-3" style="color:white" id="not"></h3>
+            <button type="button" onclick="back();" class="form-control mt-2" style="background-color:black;border-color: white;color:white">분실시 돌아가기</button>
+            <h6 class="mt-3" style="color:white" id="not"></h6>
         </div>
     </div>
 </div>
